WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110028
Fix WKDOMRangePrivate.h mistakes
https://bugs.webkit.org/show_bug.cgi?id=110028
Summary
Fix WKDOMRangePrivate.h mistakes
Darin Adler
Reported
2013-02-16 13:40:28 PST
Fix WKDOMRangePrivate.h mistakes
Attachments
Patch
(1.49 KB, patch)
2013-02-16 13:44 PST
,
Darin Adler
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2013-02-16 13:44:22 PST
Created
attachment 188727
[details]
Patch
WebKit Review Bot
Comment 2
2013-02-16 13:46:58 PST
Attachment 188727
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/WebProcess/InjectedBundle/API/mac/WKDOMRangePrivate.h']" exit_code: 1 Source/WebKit2/WebProcess/InjectedBundle/API/mac/WKDOMRangePrivate.h:30: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3
2013-02-16 14:56:52 PST
http://trac.webkit.org/changeset/143111
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug