Fix WKDOMRangePrivate.h mistakes https://bugs.webkit.org/show_bug.cgi?id=110028

Reviewed by Ryosuke Niwa.

* WebProcess/InjectedBundle/API/mac/WKDOMRange.mm:
Added include of WKDOMRangePrivate.h.

* WebProcess/InjectedBundle/API/mac/WKDOMRangePrivate.h:
Fixed class name and include to be WKDOMRange.
Fixed method name, _copyBundleRangeHandleRef, to match the
name in the source file.

Canonical link: https://commits.webkit.org/128312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143111 268f45cc-cd09-0410-ab3c-d52691b4dbfc